[project]
name = "shop-scheduler-env"
version = "1.0.0"
description = "A manufacturing production scheduling environment for agentic evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "openai>=1.0.0",
    "gradio>=5.7.1",
    "huggingface_hub>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
